--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -18,7 +18,10 @@
 
                                 <p class="logo-footer">
 
-                                    <img src="../../../assets/img/home/logo.png" alt="Logo">
+                                    <a routerLink="" 
+                                    style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: 900; font-size: 1.5rem; color: #2c3e50; text-decoration: none; letter-spacing: 2px; transition: color 0.3s ease;">
+                                   Furniture Store
+                                 </a>
 
                                 </p>
 
